// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/name/_nameIndex.vue renders loaded 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    数字・記号
  </h1>
   
  <div
    class="b-table"
  >
    <!---->
     
    <!---->
     
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped"
      >
        <!---->
         
        <tbody>
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          .59
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        dj TAKA
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        135
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          1998
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        NAOKI
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        150
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          30 Lives (Up-Up-Down-Dance Mix)
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        The Motion Sick
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        144
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          321STARS
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        DJ SIMON
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        192
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          39
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        sasakure.UK×DECO*27
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        175
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          50th Memorial Songs -Beginning Story-
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        BEMANI Sound Team
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        135
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          50th Memorial Songs -Flagship medley-
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        BEMANI Sound Team
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        135-175
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          50th Memorial Songs -The BEMANI History-
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        BEMANI Sound Team
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        136
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          50th Memorial Songs -二人の時 ～under the cherry blossoms～-
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        BEMANI Sound Team
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        160
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          8000000
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        kors k
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        100-200
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          888
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        DJ TECHNORCH
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        111-888
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          IX
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        dj TAKA VS DJ TOTTO feat.藍
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        99-396
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
        </tbody>
         
        <!---->
      </table>
    </div>
     
    <div
      class="level"
    >
      <div
        class="level-left"
      />
       
      <div
        class="level-right"
      >
        <div
          class="level-item"
        >
          <nav
            class="pagination"
          >
            <a
              class="pagination-link pagination-previous"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
            </a>
             
            <a
              class="pagination-link pagination-next"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
            </a>
             
            <ul
              class="pagination-list"
            >
              <!---->
               
              <!---->
               
              <li>
                <a
                  aria-current="true"
                  class="pagination-link is-current "
                  href="#"
                  role="button"
                >
                  1
                </a>
              </li>
               
              <!---->
               
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`/name/_nameIndex.vue renders loading 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    数字・記号
  </h1>
   
  <div
    class="b-table is-loading"
  >
    <!---->
     
    <!---->
     
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped"
      >
        <!---->
         
        <tbody>
          <tr
            class="is-empty"
          >
            <td
              colspan="0"
            >
              <section
                class="section"
              >
                <div
                  class="content has-text-grey has-text-centered"
                >
                  <p>
                    Nothing here.
                  </p>
                </div>
              </section>
            </td>
          </tr>
        </tbody>
         
        <!---->
      </table>
    </div>
     
    <div
      class="level"
    >
      <div
        class="level-left"
      />
       
      <div
        class="level-right"
      >
        <div
          class="level-item"
        >
          <nav
            class="pagination"
          >
            <a
              class="pagination-link pagination-previous"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
            </a>
             
            <a
              class="pagination-link pagination-next"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
            </a>
             
            <ul
              class="pagination-list"
            >
              <!---->
               
              <!---->
                
              <!---->
               
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</section>
`;
